# Puzzle_Sheet_Generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  ruff.toml
config/: config.json  diagram_board_colors.json  diagram_board_colors_print.json
puzzle_sheet_generator/: __init__.py  configuration.py  lichess_puzzle_db.py  psg.py  psg_cli.py  psg_cliff.py  puzzle_sheet_generator.py
puzzle_sheet_generator/cli/: autosave_command.py  config_command.py  config_commands.py  delete_command.py  print_command.py  sheet_commands.py  show_command.py  show_commands.py  store_commands.py
puzzle_sheet_generator/model/: app_config.py  puzzle_sheet.py  puzzle_store.py  repository.py  sheet_element.py
puzzle_sheet_generator/pdf_generation/: Layout12Puzzles.py  Layout6Puzzles.py  PuzzleLayout.py  generate_pdf.py
puzzle_sheet_generator/puzzle_database/: lichess_puzzle_db.py  lichess_puzzle_db_columns.py  lichess_puzzle_themes.py
puzzle_sheet_generator/service/: save_file_service.py  translation_service.py
